# Alzhiemer_disease_classifier

./: .gitignore  README.md  app.py  app1.py  main.py  params.yaml  pyproject.toml  requirements.txt
config/: config.yaml
research/: 01_data_ingestion.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  base_model.ipynb  trials.ipynb
src/Alzimer_disease_classifier/: logger.py
src/Alzimer_disease_classifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_training.py  prepare_base_model.py
src/Alzimer_disease_classifier/config/: configuration.py
src/Alzimer_disease_classifier/entity/: config_entity.py
src/Alzimer_disease_classifier/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/Alzimer_disease_classifier/utils/: common.py
templates/: index.html
