[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Alzimer_disease_classification"
version = "0.1.0"
description = "A small python package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jatindra Paul", email = "jatindrapaul7@gmail.com"}
]
dependencies = [
    "tensorflow>=2.12.0,<2.16",  
    "pandas>=1.5.3,<2.2",                                      
    "notebook>=6.5.0,<8.0",      
    "numpy>=1.21.0,<1.26",       
    "matplotlib>=3.5.0,<3.9",    
    "seaborn>=0.12.0",           
    "python-box==6.0.2",         
    "PyYAML>=6.0",               
    "tqdm>=4.65.0",              
    "ensure==1.0.2",             
    "joblib>=1.2.0",             
    "types-PyYAML>=6.0.12",      
    "scipy>=1.9.0,<1.13",        
    "Flask>=2.2.0,<3.0",         
    "Flask-Cors>=3.0.10",        
    "importlib-metadata==6.0.0"  
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]